3 Helm Deep Dive/my-app/v4/templates/front-end-ingress.yaml
# API Version
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Ingress Object Name 
  name: ingress-front-end-helm3training
  # Namespace 
  # namespace: helm3
spec:
  rules:
   # Rule Host match  /etc/hosts
   # host 80 443 
    - host: www.helm3training.com
      http:
        paths:          
          - path: /
            #Path types https://kubernetes.io/docs/concepts/services-networking/ingress/#path-types
            pathType: Prefix
            backend:
              service:
                name: front-end-app-react-ui
                port:
                  number: 8888
